--- a/index.html
+++ b/index.html
@@ -7,8 +7,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="logo">KLAVA</div>
+        <ul class="nav-links">
+           <li><a href="#">HOME</a></li>
+           <li><a href="aboutPage.html">ABOUT</a></li>
+           <li><a href="atKlavaPage.html">At KLAVA</a></li>
+           <li><a href="blogsPage.html">BLOGS</a></li>
+           <li><a href="contactPage.html">CONTACT</a></li>
+        </ul>
+    </nav>
 
+    <section class="homePage-background">
+    </section>
+
+    <section class="aboutUs">
+    </section>
+
+    <section class="atKlava">
+    </section>
+
+    <section class="blogs">
+    </section>
+
+    <section class="contact">
+    </section>
+
+    <footer>
+        <ul>
+            <li><a href="contactPage.html">CONTACT</a></li>
+            <li><a href="#">Visit @KLAVA 2025</a></li>
+        </ul>
+    </footer>
 
     <script src="app.js"></script>
 </body>
