javascript navbar complete

--- a/contactPage.html
+++ b/contactPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact US</title>
     <link rel="stylesheet" href="contactPage.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
     <section class="landingPage-background">
@@ -16,6 +17,7 @@
     <section class="contact-form">
     </section>
     
+    <script src="navbar.js"></script>
     <script src="contactPage.js"></script>
 </body>
 </html>
