--- a/index.html
+++ b/index.html
@@ -5,20 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KLAVA PASTRIES</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">KLAVA</div>
-        <ul class="nav-links">
-           <li><a href="#">HOME</a></li>
-           <li><a href="aboutPage.html">ABOUT</a></li>
-           <li><a href="atKlavaPage.html">At KLAVA</a></li>
-           <li><a href="blogsPage.html">BLOGS</a></li>
-           <li><a href="contactPage.html">CONTACT</a></li>
-        </ul>
-    </nav>
-
+    <!--navbar.js should be injected here-->
+    <main>
     <section class="homePage-background">
+        <div class="bg-image"></div>
     </section>
 
     <section class="aboutUs">
@@ -33,13 +26,22 @@
     <section class="contact">
     </section>
 
+    </main>
+
     <footer>
         <ul>
-            <li><a href="contactPage.html">CONTACT</a></li>
-            <li><a href="#">Visit @KLAVA 2025</a></li>
+            <li><a href="contactPage.html">CONTACT US</a></li>
+            <p class="copyright-notice">&copy; 2025 KLAVA. All rights reserved.</p>
+            <li><a href="#">info@KLAVApastries.com</a></li>
         </ul>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.6/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.6/ScrollTrigger.min.js"></script>
+    <script src="navbar.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
+
+<!--Photo by <a href="https://unsplash.com/@creatz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Damien Creatz</a> on <a href="https://unsplash.com/photos/strawberries-on-brown-wooden-chopping-board-bhj_dFL4Rpc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      -->
