footer javascript navigation

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
 
     </main>
 
-    <footer>
-        <ul>
-            <li><a href="contactPage.html">CONTACT US</a></li>
-            <p class="copyright-notice">&copy; 2025 KLAVA. All rights reserved.</p>
-            <li><a href="#">info@KLAVApastries.com</a></li>
-        </ul>
-    </footer>
+    <!--footer-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.6/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.6/ScrollTrigger.min.js"></script>
