contactPage heading complete

--- a/contactPage.html
+++ b/contactPage.html
@@ -8,16 +8,29 @@
     <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <section class="landingPage-background">
+    <main>
+    <section class="homePage-background">
+        <div class="bg-image"></div>
+        <h1 class="contact-heading">CONTACT US</h1>
     </section>
 
     <section class="page-info">
+        <div id="svg-section"></div>
+        <div class="address-section"></div>
     </section>
 
     <section class="contact-form">
     </section>
+    </main>
     
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.6/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.6/ScrollTrigger.min.js"></script>
     <script src="navbar.js"></script>
     <script src="contactPage.js"></script>
 </body>
 </html>
+
+<!--Photo by <a href="https://unsplash.com/@ksbphotography?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kim Becker</a> on <a href="https://unsplash.com/photos/macarons-on-black-tray-bU8OaflHB5M?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+<!--Photo by <a href="https://unsplash.com/@17allansfilms?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">ALLAN LAINEZ</a> on <a href="https://unsplash.com/photos/a-barbecue-grill-with-meat-and-vegetables-F_UjdpnWCAY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+<!--Photo by <a href="https://unsplash.com/@massimo_adami?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Massimo Adami</a> on <a href="https://unsplash.com/photos/raspberries-on-table-zEy5QBUBmRE?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
