contact heading timeline complete

--- a/contactPage.html
+++ b/contactPage.html
@@ -15,7 +15,7 @@
     </section>
 
     <section class="page-info">
-        <div id="svg-section"></div>
+        <div id="svg-container"></div>
         <div class="address-section"></div>
     </section>
 
