--- a/contactPage.html
+++ b/contactPage.html
@@ -19,7 +19,7 @@
         <div id="svg-container">
             <svg id="map" viewBox="0 0 710 700">
                 <!--Background image inside the SVG-->
-                <image href="images/gau_midrand.gif"
+                <image href="./images/gau_midrand.gif"
                 x="0" y="0" width="100%" height="100%"
                 preserveAspectRatio="xMidYMid slice"/>
 
