--- a/atKlavaPage.html
+++ b/atKlavaPage.html
@@ -18,6 +18,7 @@
         <section class="elegant-pastry">
             <h2 class="pastry">Elegant Pastry</h2>
             <div class="button-group">
+                <button id="all-btn" class="stagger-btn">ALL</button>
                 <button id="vanilla-btn" class="stagger-btn">VANILLA</button>
                 <button id="chocolate-btn" class="stagger-btn">CHOCOLATE</button>
                 <button id="mixed-btn" class="stagger-btn">MIXED</button>
@@ -30,8 +31,7 @@
                     <img src="./images/fidel-fernando-xvaqz7b7UtI-unsplash (1).jpg" alt="bluberry Pancakes">
                 </div>
                 <div class="menu-list">
-                    <ul>
-                        <li class="list-placeholder">pancakes</li>
+                    <ul id="pastry-list">
                     </ul>
                 </div>
             </div>
@@ -46,8 +46,7 @@
                     <img src="./images/anna-tukhfatullina-food-photographer-stylist-Mzy-OjtCI70-unsplash (1).jpg" alt="">
                 </div>
                 <div class="menu-list">
-                    <ul>
-                        <li class="list-placeholder2">cakes</li>
+                    <ul id="cake-list">
                     </ul>
                 </div>
             </div>
@@ -62,8 +61,7 @@
                     <img src="./images/anna-przepiorka-ZVSZ2-uOAzE-unsplash (1).jpg" alt="">
                 </div>
                 <div class="menu-list">
-                    <ul>
-                        <li class="list-placeholder2">Desserts</li>
+                    <ul id="dessert-list">
                     </ul>
                 </div>
             </div>
