--- a/blogsPage.html
+++ b/blogsPage.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    
+    <main>
+        <section class="homePage-background">
+          <div class="bg-image"></div>
+          <h1 class="blogs-heading">BLOGS</h1>
+        </section>
+    </main>
 
     <script src="navbar.js"></script>
     <script src="blogsPage.js"></script>
 </body>
 </html>
+<!--Photo by <a href="https://unsplash.com/@frostroomhead?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rodion Kutsaiev</a> on <a href="https://unsplash.com/photos/a-group-of-donuts-with-sprinkles-on-them-eL1wJWnU7Ts?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
