HomePage Gallery Complete

--- a/index.html
+++ b/index.html
@@ -12,12 +12,64 @@
     <main>
     <section class="homePage-background">
         <div class="bg-image"></div>
+        
+        <h1 class="klava-title">
+            <span>K</span><span>L</span><span>A</span><span>V</span><span>A</span>
+        </h1>
+        <p class="klava-tagline">Sophistication, made everyday — because true luxury is quality, not exclusivity.</p>
     </section>
 
-    <section class="aboutUs">
+    <!--About Us-->
+    <section class="about-content">
+        <h2 class="about-heading">ABOUT US</h2>
+
+        <!--thin pink line-break-->
+        <div class="blog-divider"></div>
+
+        <div class="about-info">
+            <div class="about-text">
+                <p>KLAVA was founded by a single vision — and a single woman — who believed that pastries should never have to choose between elegance and accessibility. As the sole owner of KLAVA, I wanted to create a pastry restaurant that takes the art of patisserie seriously… but without the intimidation, pretentiousness or unaffordable price tags that often come with it. KLAVA was born to be different — daring in flavour, playful in personality, and proudly sophisticated in its style.</p>
+                <p>Here, pastries are crafted with the intention to be both beautiful and attainable. Whether you’re stopping by for a quick sweet treat on-the-go, or settling in for a slow indulgent moment with a plated pastry that turns heads — KLAVA is designed for every type of appetite and every type of budget. We welcome everyone, at KLAVA, we believe elegance belongs to everyone.</p>
+            </div>
+            <img src="./images/Klava shop (1).png" alt="image of the KLAVA logo">
+        </div>
+        <div class="about-read-more">
+            <a href="aboutPage.html" class="readMoreBtn">More</a>
+        </div>
     </section>
 
-    <section class="atKlava">
+    <!--What's at KLAVA section-->
+    <section class="about-content">
+        <h2 id="atKlava-heading" class="about-heading">WHAT'S AT KLAVA</h2>
+        <!--thin pink line-break-->
+        <div class="blog-divider"></div>
+
+        <div class="gallery">
+            <!--First image - link with hover effect-->
+            <a href="atKlavaPage.html" class="gallery-link">
+                <img src="./images/jovan-vasiljevic-aeXOwJ5RIQM-unsplash (1).jpg" alt="Klava pastry 1 an image of chocolate swirl cake" class="vertical">
+            </a>
+
+            <img src="./images/jordane-mathieu-eDC7851HvYk-unsplash (1).jpg" alt="Klava pastry 2" class="horizontal">
+            <img src="./images/syed-maaz-OK0hA3xNVeI-unsplash (1).jpg" alt="Klava pastry 3" class="vertical">
+
+            <!--Middle linked image-->
+            <img src="./images/jelezniac-bianca-tUhEr1vylC4-unsplash (1).jpg" alt="Klava pastry 4" class="horizontal">
+            
+            <a href="atKlavaPage.html" class="gallery-link">
+                <img src="./images/binyoussif-mohammad-ali-yK4HYG7C3c0-unsplash (1).jpg" alt="Klava pastry 5" class="vertical">
+            </a>
+
+            <img src="./images/helen-van-ozbwOwN1Qeo-unsplash (1).jpg" alt="Klava pastry 6" class="horizontal">
+
+            <!--Last linked image-->
+            <img src="./images/junior-reis-pZhl3nFJ52I-unsplash (1).jpg" alt="Klava pastry 7" class="vertical">
+            <img src="./images/mr-brand-studio-RrQz0TgebHY-unsplash (1).jpg" alt="Klava pastry 8" class="horizontal">
+
+            <a href="atKlavaPage.html" class="gallery-link">
+                <img src="./images/christian-agbede-ybiz5RhS3Sw-unsplash (1).jpg" alt="Klava pastry 9" class="vertical">
+            </a>
+        </div>
     </section>
 
     <section class="blogs">
@@ -32,10 +84,16 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.6/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.6/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/MotionPathPlugin.min.js" integrity="sha512-vuNgw6lF+p97XmL9lFpbQZWBXxIFnwUVt7J/uknE4NJru5GJjjhIAauXdDtNdezqOJFnit+M3AeaM+gZ93hlmg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/DrawSVGPlugin.min.js" integrity="sha512-yOZoZc/D5ZPHwjBduLkgeGHhFlQ7CsslA5D1egpQgeV1QcV4OdCcwmRLkH7p/hEHHF1cJp3H2OpGpd7oELFGxg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="navbar.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
 
-<!--Photo by <a href="https://unsplash.com/@creatz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Damien Creatz</a> on <a href="https://unsplash.com/photos/strawberries-on-brown-wooden-chopping-board-bhj_dFL4Rpc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-      -->
+<!--Photo by <a href="https://unsplash.com/@creatz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Damien Creatz</a> on <a href="https://unsplash.com/photos/strawberries-on-brown-wooden-chopping-board-bhj_dFL4Rpc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+<!--Photo by <a href="https://unsplash.com/@syedmaaz904?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Syed Maaz</a> on <a href="https://unsplash.com/photos/a-white-plate-topped-with-a-stack-of-cookies-and-oreo-cookies-OK0hA3xNVeI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+<!--Photo by <a href="https://unsplash.com/@mrbrandstudio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mr.Brand Studio</a> on <a href="https://unsplash.com/photos/chocolate-cake-with-berries-and-cream-on-rocks-RrQz0TgebHY?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+<!--Photo by <a href="https://unsplash.com/@juniorreisfoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Junior REIS</a> on <a href="https://unsplash.com/photos/chocolate-cupcakes-on-brown-wooden-tray-pZhl3nFJ52I?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+<!--Photo by <a href="https://unsplash.com/@binyoussif?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">BINYOUSSIF mohammad ali</a> on <a href="https://unsplash.com/photos/chocolate-cake-on-white-ceramic-plate-yK4HYG7C3c0?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
+<!--Photo by <a href="https://unsplash.com/@chriscreations__?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Christian Agbede</a> on <a href="https://unsplash.com/photos/a-slice-of-layered-cake-with-berries-on-top-ybiz5RhS3Sw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>-->
