--- a/blogsPage.html
+++ b/blogsPage.html
@@ -17,7 +17,7 @@
         <!--Blog post 1-->
         <section>
             <div class="blog1-info">
-                <h2 class="blog1-heading">KLAVA's Inspiration - Where Pastry Becomes Connection</h2>
+                <h2 id="blog1-heading" class="blog1-heading">KLAVA's Inspiration - Where Pastry Becomes Connection</h2>
                 <div class="blog-images">
                     <img src="./images/pranjall-kumar-z2SoXbPTgz4-unsplash (1).jpg" alt="pastry image of a chocolate cake">
                     <img src="./images/vladislav-anchuk-WeVsLTy8jI4-unsplash (1).jpg" alt="pastry image of a cheesecake">
