I think I might be done

--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
         <div class="blog-divider"></div>
 
         <div class="gallery">
-            <!--First image - link with hover effect-->
-            <a href="atKlavaPage.html" class="gallery-link">
+            <!--First image - link with hover effect & Staggering-->
+            <span><a href="atKlavaPage.html" class="gallery-link">
                 <img src="./images/jovan-vasiljevic-aeXOwJ5RIQM-unsplash (1).jpg" alt="Klava pastry 1 an image of chocolate swirl cake" class="vertical">
-            </a>
+            </a></span>
 
-            <img src="./images/jordane-mathieu-eDC7851HvYk-unsplash (1).jpg" alt="Klava pastry 2" class="horizontal">
-            <img src="./images/syed-maaz-OK0hA3xNVeI-unsplash (1).jpg" alt="Klava pastry 3" class="vertical">
+            <span><img src="./images/jordane-mathieu-eDC7851HvYk-unsplash (1).jpg" alt="Klava pastry 2" class="horizontal"></span>
+            <span><img src="./images/syed-maaz-OK0hA3xNVeI-unsplash (1).jpg" alt="Klava pastry 3" class="vertical"></span>
 
             <!--Middle linked image-->
-            <img src="./images/jelezniac-bianca-tUhEr1vylC4-unsplash (1).jpg" alt="Klava pastry 4" class="horizontal">
+            <span><img src="./images/jelezniac-bianca-tUhEr1vylC4-unsplash (1).jpg" alt="Klava pastry 4" class="horizontal"></span>
 
-            <a href="atKlavaPage.html" class="gallery-link">
+            <span><a href="atKlavaPage.html" class="gallery-link">
                 <img src="./images/binyoussif-mohammad-ali-yK4HYG7C3c0-unsplash (1).jpg" alt="Klava pastry 5" class="vertical">
-            </a>
+            </a></span>
 
-            <img src="./images/helen-van-ozbwOwN1Qeo-unsplash (1).jpg" alt="Klava pastry 6" class="horizontal">
+            <span><img src="./images/helen-van-ozbwOwN1Qeo-unsplash (1).jpg" alt="Klava pastry 6" class="horizontal"></span>
 
             <!--Last linked image-->
-            <img src="./images/junior-reis-pZhl3nFJ52I-unsplash (1).jpg" alt="Klava pastry 7" class="vertical">
-            <img src="./images/mr-brand-studio-RrQz0TgebHY-unsplash (1).jpg" alt="Klava pastry 8" class="horizontal">
+            <span><img src="./images/junior-reis-pZhl3nFJ52I-unsplash (1).jpg" alt="Klava pastry 7" class="vertical"></span>
+            <span><img src="./images/mr-brand-studio-RrQz0TgebHY-unsplash (1).jpg" alt="Klava pastry 8" class="horizontal"></span>
 
-            <a href="atKlavaPage.html" class="gallery-link">
+           <span><a href="atKlavaPage.html" class="gallery-link">
                 <img src="./images/christian-agbede-ybiz5RhS3Sw-unsplash (1).jpg" alt="Klava pastry 9" class="vertical">
-            </a>
+            </a></span>
         </div>
      </section>
 
